# ccusage

./: .oxlintrc.json  AGENTS.md  bump.config.ts  default.nix  flake.nix  justfile  package.json  package.nix  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/skills/agent-sources/: SKILL.md
.agents/skills/context7-mcp/: SKILL.md
.agents/skills/deepwiki-mcp/: SKILL.md
.agents/skills/grep-mcp/: SKILL.md
.agents/skills/profile/references/: rust.md
.agents/skills/rust/: SKILL.md
.github/actions/build-linux-arm64-on-macos/: action.yaml
.github/actions/build-linux-native-package/: action.yaml
.github/actions/setup-nix-cache/: action.yaml
.github/workflows/: ci.yaml  release.yaml  update-pricing.yaml
apps/ccusage/: AGENTS.md  justfile
apps/ccusage-desktop/: README.md
apps/ccusage-desktop/CcusageDesktop/: CcusageDesktop.sln
apps/ccusage-desktop/CcusageDesktop/.run/: CcusageDesktop.run.xml
apps/ccusage-desktop/CcusageDesktop/CcusageDesktop/: App.xaml  App.xaml.cs  CcusageDesktop.csproj  MainPage.xaml  MainPage.xaml.cs  app.manifest
apps/ccusage-desktop/CcusageDesktop/CcusageDesktop/Models/: UsageModels.cs
apps/ccusage-desktop/CcusageDesktop/CcusageDesktop/Properties/: launchSettings.json
apps/ccusage-desktop/CcusageDesktop/CcusageDesktop/Services/: CcusageCli.cs  Fmt.cs  LimitsService.cs  Theme.cs  UsageDataService.cs
apps/ccusage/scripts/: bun-globals.d.ts  compare-pr-performance.bb  compare-pr-performance_test.clj  ensure-native-binary.nu  ensure-native-binary.test.nu  generate-large-fixture.ts
apps/ccusage/scripts/compare_pr_performance/: benchmark.clj  data.clj  main.clj  report.clj  system.clj
config/: mcporter.json
nix/: cargo-artifacts.nix  darwin-x64-package.nix  dev-shell.nix  oxlint-check.json  oxlint-plugin.js  oxlint-plugin.test.js  pnpm-tool.nix  publint-package-lock.json  publint.nix  static-package.nix  treefmt.nix
rust/: Cargo.toml
rust/crates/ccusage/: Cargo.toml  build.rs
rust/crates/ccusage-adapter-all/: Cargo.toml
rust/crates/ccusage-adapter-all/src/: lib.rs  loader.rs  report.rs  tests.rs  types.rs
rust/crates/ccusage-adapter-all/src/snapshots/: ccusage_adapter_all__tests__renders_multi_section_json_with_command_totals.snap
rust/crates/ccusage-adapter-amp/: Cargo.toml
rust/crates/ccusage-adapter-amp/src/: lib.rs  loader.rs  parser.rs  report.rs
rust/crates/ccusage-adapter-claude/: Cargo.toml
rust/crates/ccusage-adapter-claude/src/: README.md  daily.rs  lib.rs  paths.rs
rust/crates/ccusage-adapter-codebuff/: Cargo.toml
rust/crates/ccusage-adapter-codebuff/src/: lib.rs  loader.rs  parser.rs  report.rs
rust/crates/ccusage-adapter-codex/: Cargo.toml
rust/crates/ccusage-adapter-codex/src/: aggregate.rs  lib.rs  loader.rs  parser.rs  report.rs  speed.rs  types.rs
rust/crates/ccusage-adapter-common/: Cargo.toml
rust/crates/ccusage-adapter-common/src/: jsonl.rs  lib.rs
rust/crates/ccusage-adapter-copilot/: Cargo.toml
rust/crates/ccusage-adapter-copilot/src/: lib.rs  loader.rs  parser.rs  paths.rs  report.rs
rust/crates/ccusage-adapter-droid/: Cargo.toml
rust/crates/ccusage-adapter-droid/src/: lib.rs  loader.rs  parser.rs  report.rs
rust/crates/ccusage-adapter-gemini/: Cargo.toml
rust/crates/ccusage-adapter-gemini/src/: lib.rs  loader.rs  parser.rs  report.rs
rust/crates/ccusage-adapter-goose/: Cargo.toml
rust/crates/ccusage-adapter-goose/src/: lib.rs  loader.rs  parser.rs  report.rs
rust/crates/ccusage-adapter-hermes/: Cargo.toml
rust/crates/ccusage-adapter-hermes/src/: lib.rs  loader.rs  report.rs
rust/crates/ccusage-adapter-kilo/: Cargo.toml
rust/crates/ccusage-adapter-kilo/src/: lib.rs  loader.rs  parser.rs
rust/crates/ccusage-adapter-kimi/: Cargo.toml
rust/crates/ccusage-adapter-kimi/src/: lib.rs  loader.rs  parser.rs  paths.rs  report.rs
rust/crates/ccusage-adapter-openclaw/: Cargo.toml
rust/crates/ccusage-adapter-openclaw/src/: lib.rs  loader.rs  parser.rs  report.rs
rust/crates/ccusage-adapter-opencode/: Cargo.toml
rust/crates/ccusage-adapter-opencode/src/: lib.rs  loader.rs  parser.rs  report.rs
rust/crates/ccusage-adapter-pi/: Cargo.toml
rust/crates/ccusage-adapter-pi/src/: lib.rs  loader.rs  parser.rs  paths.rs  report.rs
rust/crates/ccusage-adapter-qwen/: Cargo.toml
rust/crates/ccusage-adapter-qwen/src/: lib.rs  loader.rs  parser.rs  report.rs
rust/crates/ccusage-core/: Cargo.toml
rust/crates/ccusage-core/src/: agent_report.rs  blocks.rs  config.rs  config_schema.rs  cost.rs  date_utils.rs  fast.rs  home.rs  lib.rs  logger.rs  model_aliases.rs  output.rs  path_utils.rs  pricing.rs  progress.rs  project_names.rs  summary.rs  types.rs  utils.rs
rust/crates/ccusage/src/: cost.rs  main.rs  models-dev-pricing.json  pricing.rs  types.rs
rust/crates/ccusage/src/adapter/: AGENTS.md  README.md  mod.rs
rust/crates/ccusage/src/adapter/all/: loader.rs  mod.rs
rust/crates/ccusage/src/adapter/claude/: mod.rs  paths.rs
rust/crates/ccusage/src/adapter/codex/: aggregate.rs  mod.rs  report.rs  types.rs
(+2 files in other folders)
