[package]
name = "ccusage-core"
version = "0.0.0"
edition = "2024"
build = "build.rs"
publish = false

[dependencies]
ccusage-cli = { path = "../ccusage-cli" }
ccusage-terminal = { path = "../ccusage-terminal" }
jiff = { version = "0.2.24", default-features = false, features = [
	"std",
	"tz-system",
	"tzdb-zoneinfo",
	"tzdb-bundle-platform",
] }
memchr = "2"
rustc-hash = "2"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }

[build-dependencies]
minreq = { version = "3.0.0-rc.1", default-features = false, features = ["https-rustls"] }
serde_json = "1"

[dev-dependencies]
ccusage-test-support = { path = "../ccusage-test-support" }
insta = { version = "1.47.2", features = ["json"] }
