[package]
name = "ccusage"
version = "0.0.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "ccusage"
path = "src/main.rs"

[[bin]]
name = "generate-config-schema"
path = "src/bin/generate_config_schema.rs"

[dependencies]
ccusage-adapter-all = { path = "../ccusage-adapter-all" }
ccusage-adapter-amp = { path = "../ccusage-adapter-amp" }
ccusage-adapter-claude = { path = "../ccusage-adapter-claude" }
ccusage-adapter-codebuff = { path = "../ccusage-adapter-codebuff" }
ccusage-adapter-codex = { path = "../ccusage-adapter-codex" }
ccusage-adapter-common = { path = "../ccusage-adapter-common" }
ccusage-adapter-copilot = { path = "../ccusage-adapter-copilot" }
ccusage-adapter-droid = { path = "../ccusage-adapter-droid" }
ccusage-adapter-gemini = { path = "../ccusage-adapter-gemini" }
ccusage-adapter-goose = { path = "../ccusage-adapter-goose" }
ccusage-adapter-hermes = { path = "../ccusage-adapter-hermes" }
ccusage-adapter-kilo = { path = "../ccusage-adapter-kilo" }
ccusage-adapter-kimi = { path = "../ccusage-adapter-kimi" }
ccusage-adapter-openclaw = { path = "../ccusage-adapter-openclaw" }
ccusage-adapter-opencode = { path = "../ccusage-adapter-opencode" }
ccusage-adapter-pi = { path = "../ccusage-adapter-pi" }
ccusage-adapter-qwen = { path = "../ccusage-adapter-qwen" }
ccusage-cli = { path = "../ccusage-cli" }
ccusage-core = { path = "../ccusage-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
serde_json = "1"

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
mimalloc = "0.1.50"

[dev-dependencies]
ccusage-test-support = { path = "../ccusage-test-support" }
